# cpp-kzg-ceremony-client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build-aarch64.sh  build-amd64.sh  build-arm.sh  build-armv7.sh  build.bat  build.sh  clang-tidy.sh  dependencies.cmake  format.bat  format.sh  update-containers.sh
.github/workflows/: alpine-ci.yml  build.yml  checks.yml  clang-tidy.yml  create-release.yml  darwin-ci.yml  debian-ci.yml  ubuntu-ci.yml  windows-ci.yml
containers/: ubuntu-18.04-aarch64-build.Dockerfile  ubuntu-18.04-amd64-build.Dockerfile  ubuntu-18.04-armv7-build.Dockerfile  ubuntu-20.04-aarch64-build.Dockerfile  ubuntu-20.04-amd64-build.Dockerfile  ubuntu-20.04-armv7-build.Dockerfile  ubuntu-20.04-armv7-test.Dockerfile  ubuntu-22.04-aarch64-build.Dockerfile  ubuntu-22.04-amd64-build.Dockerfile  ubuntu-22.04-armv7-build.Dockerfile  ubuntu-22.10-aarch64-build.Dockerfile  ubuntu-22.10-amd64-build.Dockerfile  ubuntu-22.10-armv7-build.Dockerfile  ubuntu-23.04-aarch64-build.Dockerfile  ubuntu-23.04-amd64-build.Dockerfile  ubuntu-23.04-armv7-build.Dockerfile
include/: airgapped_flow.hpp  arg_parser.h  arg_parser.hpp  ascii_title.h  ascii_title.hpp  auth_browser.hpp  auth_callback_server.h  auth_callback_server.hpp  auth_helpers.hpp  auth_info.h  auth_info.hpp  auth_request_link.hpp  auth_request_link_response.h  auth_request_link_response.hpp  batch_contribution.hpp  batch_transcript.hpp  bls_signature.hpp  bls_signer.hpp  complete_flow.hpp  contribution.h  contribution.hpp  contribution_error.hpp  contribution_receipt.hpp  contribution_response.h  contribution_response.hpp  contribution_schema.h  contribution_schema.hpp  ethereum_signing_html.hpp  g1_power.h  g1_power.hpp  g2_power.h  g2_power.hpp  github_user.hpp  hex_util.h  hex_util.hpp  id_token.hpp  identity_fetcher.hpp  internet_flow.hpp  port_picker.hpp  pot_pubkey_message.hpp  (+14 more)
src/: CMakeLists.txt  airgapped_flow.cpp  arg_parser.cc  arg_parser.cpp  arg_parser_test.cpp  auth_browser.cpp  auth_callback_server.cc  auth_callback_server.cpp  auth_callback_server_test.cpp  auth_helpers.cpp  auth_request_link.cpp  auth_request_link_response.cc  auth_request_link_response.cpp  auth_request_link_test.cpp  batch_contribution.cpp  batch_contribution_test.cpp  batch_transcript.cpp  bls_signature.cpp  bls_signer.cpp  complete_flow.cpp  contribution.cpp  contribution_error.cpp  contribution_error_test.cpp  contribution_receipt.cpp  contribution_receipt_test.cpp  contribution_response.cc  contribution_response.cpp  g1_power.cpp  g2_power.cpp  github_user.cpp  hex_util.cc  hex_util.cpp  hex_util_test.cpp  id_token.cpp  identity_fetcher.cpp  identity_fetcher_test.cpp  internet_flow.cpp  main.cc  main.cpp  port_picker.cpp  (+16 more)
